--- a/index.html
+++ b/index.html
@@ -77,21 +77,21 @@
 
             <div class="card_container">
             <div class="card_1">
-                <img src="images/transline_1.jpg">
+                <img src="transline_1.jpg">
                 <h2>International Shipping</h2>
                 <p>Offering delivery services to international destinations, potentially with customs clearance and documentation.
                     Useful for businesses engaged in cross-border trade.</p>
             </div>
 
             <div class="card_1">
-                <img src="images/transline_2.jpg">
+                <img src="transline_2.jpg">
                 <h2>International Shipping</h2>
                 <p>Offering delivery services to international destinations, potentially with customs clearance and documentation.
                     Useful for businesses engaged in cross-border trade.</p>
             </div>
 
             <div class="card_1">
-                <img src="images/trans7.jpg">
+                <img src="trans7.jpg">
                 <h2>International Shipping</h2>
                 <p>Offering delivery services to international destinations, potentially with customs clearance and documentation.
                     Useful for businesses engaged in cross-border trade.</p>
@@ -112,7 +112,7 @@
             </div>
             <div class="how_container">
                 <div class="how_container_details">
-                    <img src="images/h1.svg">
+                    <img src="h1.svg">
                 <h2>Order Placement:</h2>
                 <i class="fa-solid fa-arrow-right-long" style="color: #ff4500; font-size: 25px;"></i>
                 <p>Customers place orders for 
@@ -122,7 +122,7 @@
                 </div>
 
                 <div class="how_container_details">
-                    <img src="images/h2.svg">
+                    <img src="h2.svg">
                 <h2>Package Collection:</h2>
                 <i class="fa-solid fa-arrow-right-long" style="color: #ff4500; font-size: 25px;"></i>
                 <p>Offering delivery services to international destinations, 
@@ -131,14 +131,14 @@
                 </div>
 
                 <div class="how_container_details">
-                    <img src="images/h3.png">
+                    <img src="h3.png">
                 <h2>Sorting and Routing:</h2>
                 <i class="fa-solid fa-arrow-right-long" style="color: #ff4500; font-size: 25px;"></i>
                 <p>After collection, packages are brought back to a sorting facility. Here, packages are sorted based on factors like destination, delivery speed, and size. Efficient routing ensures that packages are grouped logically for delivery routes, minimizing travel time and maximizing efficiency.</p>
                 </div>
 
                 <div class="how_container_details">
-                    <img src="images/h4.svg">
+                    <img src="h4.svg">
                 <h2>Transportation:</h2>
                 <i class="fa-solid fa-arrow-turn-down"style="color: #ff4500; font-size: 25px;"></i>
                 <p>Once sorted, packages are loaded onto delivery vehicles for transportation. Courier companies may have various transportation modes ranging from trucks for long-distance deliveries to bikes or electric scooters for urban areas.</p>
@@ -147,28 +147,28 @@
           
 
                 <div class="how_container_details">
-                    <img src="images/h5.svg">
+                    <img src="h5.svg">
                 <h2>Tracking:</h2>
                 <i class="fa-solid fa-arrow-right-long" style="color: #ff4500; font-size: 25px;"></i>
                 <p>Throughout the transportation process, packages are tracked using technology such as GPS or barcode scanning systems. This allows both the courier company and the customer to monitor the status and location of the package in real-time.</p>
                 </div>
 
                 <div class="how_container_details">
-                    <img src="images/h6.svg">
+                    <img src="h6.svg">
                 <h2>Delivery: </h2>
                 <i class="fa-solid fa-arrow-right-long" style="color: #ff4500; font-size: 25px;"></i>
                 <p>Couriers deliver packages to the recipient's address based on the designated route. They may require recipients to sign for the delivery as proof of receipt, depending on the service level chosen.</p>
                 </div>
 
                 <div class="how_container_details">
-                    <img src="images/h7.svg">
+                    <img src="h7.svg">
                 <h2>Confirmation:</h2>
                 <i class="fa-regular fa-circle-check" style="color: #ff4500; font-size: 25px;"></i>
                 <p>Once the package is delivered, the courier may obtain confirmation from the recipient. This can be in the form of a signature, a photo of the delivered package, or a confirmation message. Customer feedback may also be collected at this stage to assess service quality.</p>
                 </div>
 
                 <div class="how_container_details">
-                    <img src="images/h8.svg">
+                    <img src="h8.svg">
                 <h2>Billing: </h2>
                 <i class="fa-solid fa-arrow-right-long" style="color: #ff4500; font-size: 25px;"></i>
                 <p> Finally, the courier company handles billing processes, invoicing customers for the services provided. Administrative tasks such as customer support, scheduling, and managing courier fleets are also essential parts of the operation.</p>
@@ -184,7 +184,7 @@
             <div class="review_container">
                 <div class="container_details">
                     <div class="image_details">
-                        <img src="images/user1.jpg">
+                        <img src="user1.jpg">
                         <div class="image_text">
                             <h3>Wendo Erika</h3>
                             <p>Manager at Britam</p>
@@ -200,7 +200,7 @@
 
                     <div class="container_details">
                         <div class="image_details">
-                            <img src="images/user3.jpg">
+                            <img src="user3.jpg">
                             <div class="image_text">
                                 <h3>Sam Wanga</h3>
                                 <p>Chef at ArtCaffe</p>
@@ -216,7 +216,7 @@
 
                         <div class="container_details">
                             <div class="image_details">
-                                <img src="images/user2.jpg">
+                                <img src="user2.jpg">
                                 <div class="image_text">
                                     <h3>Wendo Erika</h3>
                                     <p>Manager at Britam</p>
@@ -232,7 +232,7 @@
 
                             <div class="container_details">
                                 <div class="image_details">
-                                    <img src="images/user4.jpg">
+                                    <img src="user4.jpg">
                                     <div class="image_text">
                                         <h3>Wendo Erika</h3>
                                         <p>Manager at Britam</p>
