--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 </div>
 
                 <div class="col_2">
-                    <img src="images/trasnsline_bg.png">
+                    <img src="trasnsline_bg.png">
                 </div>
 
         </div>
